--- a/css/main.css
+++ b/css/main.css
@@ -114,6 +114,10 @@ svg {
   margin: -1px;
 }
 
+.no-scroll {
+  overflow: hidden;
+}
+
 .header {
   position: absolute;
   top: 0;
@@ -193,6 +197,7 @@ svg {
     overflow-y: scroll;
     pointer-events: none;
     visibility: hidden;
+    z-index: 99;
     transform: translateX(100%);
     background-color: rgba(25, 28, 38, 0.2);
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
