--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -77,6 +77,8 @@
     pointer-events: none;
     visibility: hidden;
 
+    z-index: 99;
+
     transform: translateX(100%);
     background-color: rgba(25, 28, 38, 0.2);
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08),
